--- a/employee-manager-client-frontend/package.json
+++ b/employee-manager-client-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.19.2",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@mui/icons-material": "^6.1.10",
@@ -17,9 +18,9 @@
     "ag-grid-community": "^32.3.3",
     "ag-grid-enterprise": "^32.3.3",
     "axios": "^1.7.9",
+    "DOM": "^0.0.3",
     "flowbite": "^2.5.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
   "devDependencies": {
