--- a/employee-manager-server/pom.xml
+++ b/employee-manager-server/pom.xml
@@ -75,9 +75,15 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.6.2.Final</version>
 		</dependency>
-	</dependencies>
-
-	<build>
+    
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+    </dependency>
+	
+  </dependencies>
+	
+  <build>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
