feat: adds new employee deployment dependencies (#43)
* chore: fixes database issues

* feat: adds new database compatibility and makes it so users can only see their employees

* chore: new chore for controller

* feat:adds deployment dependencies

* feat:adds new deployment dependencies

--- a/employee-manager-server/pom.xml
+++ b/employee-manager-server/pom.xml
@@ -75,6 +75,8 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>6.6.2.Final</version>
 		</dependency>
+	</dependencies>
+	<build>
     
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
